# AgriTesseract

./: .gitignore  README.md  launch.py  main.py  pyproject.toml  verify_gui.py
.agent/plans/: 20251209_implement_plan.md  20251221_sam3_ui.md  20260209_easyidp_subplot_refactor_design.md  20260210_seedling_sam3_toptab_implementation.md  20260212_seedling_sam3_slice_inf_gis_export.md  20260213_rename_ids_module_01_overall_workflow.md  20260213_rename_ids_module_02_file_inputs_and_layers.md  20260213_rename_ids_module_03_ridge_direction_selection.md  20260213_rename_ids_module_04_ridge_spacing_and_peak_detection.md  20260213_rename_ids_module_05_ordering_ransac_clustering.md  20260213_rename_ids_module_06_numbering_rule_engine.md  20260213_rename_ids_module_07_point_editing_undo_redo.md  20260213_rename_ids_module_08_map_canvas_rendering_and_labels.md  20260213_rename_ids_module_08a_map_canvas_prereq_for_numbering.md  20260213_rename_ids_module_08b_map_canvas_advanced_rendering.md  20260213_rename_ids_module_09_save_export_and_handoff.md  20260213_restore_geopandas_remove_easyidp.md  20260215_add_point_layer_api_unification.md
.agent/references/pyside_gis_loader/: 04_demo_layer_manage_drag.py  06_demo_layer_rotation.py
.agent/references/sam3_slice/: inference_slice.py
.agent/references/seedling_pos/: 13_sam2shp.ipynb  14_order_by_ridge.py  21_slice_time.ipynb  call_sam3_worker.py  pyproject.toml
.agent/rules/: examples.md  follow-init-structure.md
.agent/summary/: 20251221_map_canvas.md  20260209_easyidp_subplot_refactor_diff_report.md  20260211_preview_controller_fix.md  20260211_preview_ui_updates.md  20260211_seedling_code_refactoring.md  20260212_UI_Refactoring.md  20260212_fix_preview_region_visibility.md  20260212_refactor_rename_ids_topbar.md  20260212_replace_seedling_infobar.md  20260213_seedling_sam3_slice_inference_delivery.md  20260214_layer_type_contract_and_icon_fix.md  20260214_rename_ids_module_02_file_inputs_and_layers_changelog.md  20260214_rename_ids_module_changelog.md  20260215_ordering_tab_single_layer_followups.md  20260215_rename_ids_module_04_task_summary.md  20260215_tests_domain_reorg.md  20260216_replace_layer_panel_icons.md
.brain/: implement_plan.md
dev.notes/: 01_demo_load_point_shp.py  02_demo_load_big_geotiff.py  03_demo_layer_manage.py  04_demo_layer_manage_drag.py  05_demo_tree_dragdrop_signal.py  06_demo_layer_rotation.py
dev.notes/sam3_slice/: pyproject.toml
dev.notes/seedling_pos/: 11_slice_dom.ipynb  12_detect_by_sam.ipynb
src/: __init__.py
src/core/: __init__.py  subplot_generator.py
src/gui/: __init__.py  config.py  main_window.py
src/gui/components/: __init__.py  base_interface.py  bottom_panel.py  layer_panel.py  layer_types.py  map_canvas.py  ribbon_bar.py  (+3 more)
src/utils/: __init__.py  seedling_cache.py  seedling_io.py  seedling_points.py  seedling_preview.py
tests/: __init__.py  conftest.py  test_dependency_contract.py  test_map_canvas_layer_order.py  test_map_canvas_vector_geopandas.py  test_seedling_cache.py  test_seedling_io.py  test_seedling_points.py  test_seedling_preview.py  test_seedling_preview_worker.py  test_seedling_sam3.py  test_seedling_slice.py  test_seedling_tab_layout.py  test_subplot_easyidp.py  test_subplot_generator.py
tests/bottom_panel/: test_figure_panel.py  test_panel_host.py
tests/gui/: test_layer_panel_fit_actions.py  test_map_canvas_fit_axis.py
tests/map_canvas/: __init__.py  test_hover_transform.py  test_point_layer_api.py
tests/rename_ids/: __init__.py  conftest.py  test_boundary.py  test_dom_loading.py  test_io.py  test_ordering_end_to_end.py  test_ordering_ui_state.py  test_ridge_density.py  test_ridge_detection_controller.py  test_ridge_direction.py  test_ridge_figure_panel.py  test_ridge_focus.py  test_ridge_label_teaching_tip.py  test_ridge_manual_draw_interaction.py  test_ridge_mode_exclusion_and_payload.py  test_ridge_ordering_controller.py  test_ridge_ordering_core.py  test_ridge_ordering_ransac.py  test_ridge_panel_visibility_rules.py  test_ridge_rotation_confirm_flow.py  test_ridge_state_sync_with_layer_deletion.py  test_ridge_tab_direction_ui.py
tests/seedling_detection/: __init__.py  test_io.py  test_preview.py  test_preview_worker.py  test_sam3.py  test_slice.py  test_tab_handoff.py
tests/subplot_generate/: __init__.py  test_geodataframe_io.py
(+59 files in other folders)
