[project]
name = "easyplantfieldid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.1",
    "loguru>=0.7.3",
    "pyqtgraph>=0.13.7",
    "pyside6>=6.10.0",
    "rasterio>=1.4.3",
    "ultralytics>=8.3.203",
]

[dependency-groups]
dev = []
