[project]
name = "easyplantfieldid"
version = "0.1.0"
description = "GIS preprocessing and seedling detection GUI application"
readme = "README.md"
requires-python = ">=3.12"

# Core dependencies
dependencies = [
    # GUI
    "pyside6>=6.10.0",
    "pyqtgraph>=0.13.7",
    "PySide6-Fluent-Widgets>=1.7.0",
    
    # GIS data processing
    "geopandas>=1.1.1",
    "rasterio>=1.4.3",
    "shapely>=2.0.0",
    
    # Scientific computing
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.0",
    "scikit-image>=0.24.0",
    
    # Utilities
    "loguru>=0.7.3",
    "tqdm>=4.66.0",

    # deep learning
    "ultralytics>=8.3.237",
]

[dependency-groups]

# Development dependencies
dev = [
    "pytest>=8.4.2",
    "pytest-qt>=4.5.0",
    "black>=24.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
